fix: List doc and 404 exception handled correctly
